# termlib

./: .editorconfig  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: ci.yml
benchmark/: build.gradle.kts
benchmark/src/jmh/kotlin/org/connectbot/terminal/benchmark/: TerminalBackendBenchmark.kt
build-logic/: build.gradle.kts
build-logic/src/main/kotlin/: termlib-publish.gradle.kts
gradle/: libs.versions.toml
lib/: api.txt  build.gradle.kts
lib-intf/: build.gradle.kts
lib-intf/src/main/kotlin/org/connectbot/terminal/: CellRun.kt  TerminalBackend.kt  TerminalCallbacks.kt
lib-native/: build.gradle.kts
lib-native/src/main/cpp/: CMakeLists.txt  Terminal.cpp  Terminal.h
lib-native/src/main/kotlin/org/connectbot/terminal/: TerminalNative.kt
lib-wasm/: build.gradle.kts
lib-wasm/src/main/cpp/: CMakeLists.txt  vterm_wasm.c
lib-wasm/src/main/kotlin/org/connectbot/terminal/wasm/: ShadowTerminalNative.kt  TerminalWasm.kt
lib-wasm/src/main/resources/: libvterm.wasm
lib-wasm/src/test/kotlin/org/connectbot/terminal/wasm/: TerminalWasmTest.kt
lib/dokka/templates/includes/: footer.ftl
lib/src/androidTest/java/org/connectbot/terminal/: BracketedPasteTest.kt  ImeInputViewTest.kt  KeyboardHandlerTest.kt  ShellIntegrationTest.kt
lib/src/main/cpp/: CMakeLists.txt  Terminal.cpp  Terminal.h
lib/src/main/java/org/connectbot/terminal/: AccessibilityOverlay.kt  AccessibilityStateManager.kt  CellRun.kt  ColorCache.kt  CursorBlinkMode.kt  ImeInputView.kt  KeyboardHandler.kt  LiveOutputRegion.kt  OscParser.kt  SearchController.kt  SearchManager.kt  SearchMatch.kt  SelectionManager.kt  SemanticType.kt  TermScreen.kt  Terminal.kt  TerminalBuffer.kt  TerminalCallbacks.kt  TerminalEmulator.kt  TerminalLine.kt  TerminalNative.kt  TerminalScreenState.kt  UrlDetection.kt
lib/src/main/java/org/connectbot/terminal/fonts/: TerminalFont.kt  TerminalFontCompose.kt  TerminalFontProvider.kt
lib/src/test/java/org/connectbot/terminal/: AccessibilityOverlayTest.kt  CursorAndModeEscapeTest.kt  CursorBlinkModeTest.kt  ImeInputViewTest.kt  KeyboardHandlerNfcTest.kt  KeyboardHandlerTest.kt  OscParserTest.kt  OscSequenceTest.kt  ReviewModeTest.kt  SelectionManagerTest.kt  SemanticTypeTest.kt  ShellIntegrationTest.kt  SnapshotUpdateIntervalTest.kt  TerminalGestureTest.kt  TerminalScreenStateScrollTest.kt  TerminalScreenStateUrlTest.kt  TerminalUrlExtractionTest.kt  TextAntiAliasTest.kt
test-app/: build.gradle.kts
test-app/src/main/java/org/connectbot/terminal/testapp/: Icons.kt  ShellScreen.kt
test-app/src/main/res/raw/: test_attributes.txt  test_scroll.txt
